feat: Re-generate after branch requirement removal
