# python/v1/generated/rafikigen/models/__init__.py
@@ -16,7 +16,6 @@
 # import models into model package
 from rafikigen.models.banks_get200_response import BanksGet200Response
 from rafikigen.models.banks_get200_response_all_of_data_inner import BanksGet200ResponseAllOfDataInner
-from rafikigen.models.banks_get200_response_all_of_data_inner_branches_inner import BanksGet200ResponseAllOfDataInnerBranchesInner
 from rafikigen.models.openapi_payment_account_get_or_create_request import OpenapiPaymentAccountGetOrCreateRequest
 from rafikigen.models.openapi_payment_account_get_or_create_request_bank_account import OpenapiPaymentAccountGetOrCreateRequestBankAccount
 from rafikigen.models.openapi_payment_account_get_or_create_request_holder import OpenapiPaymentAccountGetOrCreateRequestHolder
